# apollo_mcp_graphql_experiment

./: .gitignore  README.md  env.example  main.py  pyproject.toml  pytest.ini  test_setup.py  travel_bookings.db
docs/: ai_engineering_notes.md  recommendation_agent.md  recommendation_agent_I.md
graphos/: README.md
src/agents/: __init__.py
src/agents/data/: __init__.py  data_agent.py
src/agents/host/: __init__.py  host_agent.py
src/config/: __init__.py  settings.py
src/python/: ollama_client.ipynb  run_travel_agent.py  test_database.py  travel_bookings_mcp_server.py  travel_bookings_toolspec.json
src/python/ollama_agent/: ollama_client.ipynb  ollama_setup.py  travel_booking_agent.py  travel_bookings_mcp_client.py
src/python/pricing_recommendation_agent/: PROJECT_STRUCTURE.md  README.md  data_simulator.py  demo.py  main.py  mcp_server.py  pricing_recommendation_agent.py  requirements.txt  setup_llm.py  streamlit_ui.py  test_chat.py
src/python/pricing_recommendation_agent/config/: __init__.py  config.env.example  config.py  config.toml.example
src/python/pricing_recommendation_agent/core/: __init__.py
src/python/pricing_recommendation_agent/docs/: README.md  __init__.py  notes.md
src/python/pricing_recommendation_agent/scripts/: __init__.py  demo.py  (+3 more)
src/servers/: __init__.py
src/servers/a2a/: __init__.py  a2a_server.py
src/tests/: __init__.py
src/tests/integration/: test_a2a_server.py
src/tests/unit/: test_athena_tool.py  test_data_agent.py  test_host_agent.py
src/tools/: __init__.py
src/tools/athena/: __init__.py  athena_tool.py
(+7 files in other folders)
